# btcmap-cli

./: Cargo.toml  README.md  install.sh  opencode.jsonc
.github/workflows/: preview.yml
src/: db.rs  main.rs  rpc.rs  settings.rs
src/command/: admin.rs  area.rs  auth.rs  common.rs  dashboard.rs  element.rs  event.rs  import.rs  matrix.rs  mod.rs  paywall.rs  report.rs  setup.rs  user.rs
