[package]
name = "btcmap-cli"
version = "0.1.0"
edition =   "2021"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[dependencies]
ureq = "=3.0.0-rc1"
colored_json = "5.0.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
dirs = "5.0.1"
serde_json = "1.0.128"
clap = { version = "4.5.20", features = ["derive"] }
