[package]
name = "btcmap-cli"
version = "0.1.0"
edition =   "2021"
description = "Manage BTC Map server via JSON RPC API"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[dependencies]
ureq = { version = "3.0.11", default-features = false, features = ["rustls", "gzip", "json"] }
colored_json = { version = "5.0.0", default-features = false }
rusqlite = { version = "0.32.1", default-features = false, features = ["bundled"] }
dirs = { version = "6.0.0", default-features = false }
serde_json = { version = "1.0.140", default-features = false, features = ["preserve_order"] }
clap = { version = "4.5.36", default-features = false, features = ["std", "derive"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
